@@ -4,6 +4,9 @@
         and added the get_function_ptr virtual method. added documentation
         * include/Rcpp/module/Module_generated_CppFunction.h: implementation 
         of get_function_ptr in classes that derive CppFunction
+        * src/Module.cpp: s/get_function_ptr/get_function/
+        * include/Rcpp/module/Module.h : factored out and documented. 
+        s/get_function_ptr/get_function/
 
 2012-11-01  Dirk Eddelbuettel  <edd@debian.org>
 
